mark-alignment-issue

--- a/resources/assets/sass/global.scss
+++ b/resources/assets/sass/global.scss
@@ -540,7 +540,6 @@
         }
         .text{
           padding-left: 30px;
-          display: inline-block;
         }
       }
       input:checked ~ label{
